02-kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-learn-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-learn-service
                port:
                  number: 80
